@@ -1,137 +1,32 @@
-Creating a Paint-like application in JavaFX is a great project! Here's a breakdown of how you can approach it, focusing on the core components and functionalities:
+# Paint in JavaFX 
 
-**1. Core Drawing Area: `Canvas`**
+Still better than MS Paint...
 
-*   The heart of your application will be a `javafx.scene.canvas.Canvas` node.
-*   The `Canvas` provides a `GraphicsContext` (`canvas.getGraphicsContext2D()`) which you'll use to perform all drawing operations (drawing lines, shapes, text, images).
+## Features
+- **Drawing Shapes**: Draw various shapes like circles, rectangles, lines, polygons, etc.
+- **Color Selection**: Choose colors for shapes and the background.
+- **Shape Selection**: Select shapes to move or delete them.
+- **Undo/Redo**: Undo and redo actions.
+- **Save/Load**: Save the drawing to a file and load it back.
 
-**2. Basic UI Structure (Layout)**
+## Requirements
+- Java 17 or higher
+- JavaFX SDK (17.0.15 or higher)
 
-*   Use layout panes like `BorderPane`, `VBox`, `HBox`, and `ToolBar` to organize your UI.
-*   **Example Structure:**
-    *   `BorderPane` (root):
-        *   **Top:** `ToolBar` or `HBox` for tool selection, color picker, stroke size.
-        *   **Center:** The `Canvas` for drawing.
-        *   **Left/Right (Optional):** Panels for layers, more advanced tool options.
-        *   **Bottom (Optional):** Status bar for coordinates, zoom level.
 
-**3. Drawing Tools & Functionality**
+## Run the app
 
-*   **Tool Selection:**
-    *   Use `ToggleButton`s (grouped in a `ToggleGroup`) for selecting tools like Pencil, Eraser, Line, Rectangle, Oval, etc. This ensures only one tool is active at a time.
-*   **Color Selection:**
-    *   Use `javafx.scene.control.ColorPicker` to allow users to choose drawing colors.
-*   **Stroke/Brush Size:**
-    *   Use a `javafx.scene.control.Slider` or `ComboBox` to let users select the thickness of lines or brush strokes.
-*   **Pencil/Brush Tool:**
-    *   **Mouse Events:**
-        *   `canvas.setOnMousePressed()`: Get the starting point. Set the `GraphicsContext`'s stroke color and line width. Begin a path (`gc.beginPath()`, `gc.moveTo(x, y)`).
-        *   `canvas.setOnMouseDragged()`: Get the current point. Draw a line segment from the previous point to the current point (`gc.lineTo(x, y)`, `gc.stroke()`). Update the previous point.
-        *   `canvas.setOnMouseReleased()`: Finalize the path (optional, `gc.closePath()` if needed, but `stroke()` already draws).
-*   **Eraser Tool:**
-    *   Similar to the pencil, but instead of drawing with the selected color, you draw with the background color of the canvas (e.g., white) or use `gc.clearRect(x, y, width, height)` to clear small rectangles along the mouse path.
-*   **Shape Tools (Line, Rectangle, Oval):**
-    *   `canvas.setOnMousePressed()`: Store the starting coordinates (e.g., `startX`, `startY`).
-    *   `canvas.setOnMouseDragged()`:
-        *   This is tricky for live preview. One common approach is to draw on a *temporary* transparent canvas layered on top, or to clear and redraw the shape from `startX, startY` to the current mouse position (`currentX, currentY`) on the main canvas. For simplicity, you might initially only draw the final shape on mouse release.
-        *   Calculate width and height: `Math.abs(currentX - startX)`, `Math.abs(currentY - startY)`.
-        *   Determine the correct top-left corner for drawing: `Math.min(startX, currentX)`, `Math.min(startY, currentY)`.
-    *   `canvas.setOnMouseReleased()`: Get the final end coordinates. Draw the definitive shape on the main canvas using `gc.strokeLine()`, `gc.strokeRect()`, `gc.strokeOval()`, or their `fill` counterparts (`gc.fillRect()`, etc.).
-*   **Fill Tool (Bucket - More Advanced):**
-    *   Requires a flood fill algorithm. You'd get the color of the pixel clicked and then recursively (or iteratively with a stack/queue) change the color of adjacent pixels of the same color to the new fill color. This operates on the pixel data of the canvas, which can be accessed via a `WritableImage` snapshot.
+Running on linux (Ubuntu 22.04) with Java 17 and JavaFX 17.0.15.
+1. Download JavaFX SDK from [Gluon](https://gluonhq.com/products/javafx/)
+2. Unzip the SDK to a directory, e.g., `/opt/javafx-sdk-17.0.15/`
 
-**4. Handling State**
+Compile with 1 *simple* command:
 
-You'll need member variables in your `Application` class (or a dedicated controller class) to keep track of:
-
-*   The currently selected tool.
-*   The currently selected color (from `ColorPicker`).
-*   The current stroke width (from `Slider`).
-*   Start coordinates for drawing shapes.
-
-**5. `GraphicsContext` Methods**
-
-Key methods you'll use from `GraphicsContext`:
-
-*   `setStroke(Paint p)`: Sets the color for lines/outlines.
-*   `setFill(Paint p)`: Sets the color for filling shapes.
-*   `setLineWidth(double lw)`: Sets the thickness of lines.
-*   `beginPath()`
-*   `moveTo(double x, double y)`
-*   `lineTo(double x, double y)`
-*   `stroke()`: Draws the current path's outline.
-*   `fill()`: Fills the current path.
-*   `closePath()`
-*   `strokeLine(double x1, double y1, double x2, double y2)`
-*   `strokeRect(double x, double y, double w, double h)`
-*   `fillRect(double x, double y, double w, double h)`
-*   `strokeOval(double x, double y, double w, double h)`
-*   `fillOval(double x, double y, double w, double h)`
-*   `clearRect(double x, double y, double w, double h)`
-*   `fillText(String text, double x, double y)`
-*   `strokeText(String text, double x, double y)`
-*   `setFont(Font f)`
-
-**Example Snippet (Conceptual for Pencil):**
-
-```java
-// Inside your Application class
-private Canvas canvas;
-private GraphicsContext gc;
-private ColorPicker colorPicker;
-private Slider strokeSizeSlider;
-private ToggleButton pencilToolButton; // Assume this is part of a ToggleGroup
-
-// ... in start() method ...
-canvas = new Canvas(800, 600);
-gc = canvas.getGraphicsContext2D();
-// Initialize colorPicker, strokeSizeSlider, pencilToolButton etc.
-
-// Default drawing settings
-gc.setStroke(Color.BLACK);
-gc.setLineWidth(1);
-
-colorPicker.setOnAction(e -> gc.setStroke(colorPicker.getValue()));
-strokeSizeSlider.valueProperty().addListener((obs, oldVal, newVal) -> gc.setLineWidth(newVal.doubleValue()));
-
-canvas.setOnMousePressed(event -> {
-    if (pencilToolButton.isSelected()) { // Check if pencil tool is active
-        gc.beginPath();
-        gc.moveTo(event.getX(), event.getY());
-        gc.stroke(); // Draw a dot at the start
-    }
-    // ... handle other tools ...
-});
-
-canvas.setOnMouseDragged(event -> {
-    if (pencilToolButton.isSelected()) {
-        gc.lineTo(event.getX(), event.getY());
-        gc.stroke();
-    }
-    // ... handle other tools ...
-});
-
-// canvas.setOnMouseReleased for shape tools, etc.
+```sh
+javac --module-path /opt/javafx-sdk-17.0.15/lib --add-modules javafx.controls Main.java DrawingBoard.java PaintToolBar.java StatusBar.java Shapes.java Circle.java Rectangle.java Line.java NPolygon.java Triangle.java Pentagon.java Hexagon.java -d classes
 ```
 
-**6. Advanced Features (Consider Later)**
+```sh
+cd classes && java --module-path /opt/javafx-sdk-17.0.15/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web Main && cd ..
+```
 
-*   **File Menu (New, Open, Save):**
-    *   **Save:** Take a snapshot of the `Canvas` using `canvas.snapshot(null, null)` to get a `WritableImage`. Then use `javax.imageio.ImageIO.write()` to save it to a file (e.g., PNG). You'll need to add `requires java.desktop;` to your `module-info.java` for `ImageIO`.
-    *   **Open:** Load an image using `new Image(inputStream)` and draw it onto the canvas using `gc.drawImage()`.
-    *   **New:** Clear the canvas (`gc.clearRect(0, 0, canvas.getWidth(), canvas.getHeight())`).
-*   **Undo/Redo:**
-    *   This is complex. You might store snapshots of the canvas (`WritableImage`) in a list for undo/redo, or store a list of drawing commands that can be replayed.
-*   **Text Tool:** Use `gc.fillText()` or `gc.strokeText()`. You might need a `TextInputDialog` to get the text from the user.
-*   **Zooming/Panning:** More complex, involves transforming the `GraphicsContext`.
-
-**Steps to Get Started:**
-
-1.  **Set up the Basic UI:** Create the `Stage`, `Scene`, a `BorderPane`, and add a `Canvas` to its center.
-2.  **Add a ColorPicker and Stroke Slider:** Place them in a `ToolBar` or `HBox` at the top.
-3.  **Implement the Pencil Tool:** Focus on handling `setOnMousePressed` and `setOnMouseDragged` to draw freehand lines. Make sure color and stroke size changes are reflected.
-4.  **Add Tool Selection:** Introduce `ToggleButton`s for different tools.
-5.  **Implement Shape Tools:** Start with the Line tool, then Rectangle, then Oval.
-6.  **Gradually Add More Features:** Eraser, Save/Open, etc.
-
-This is a significant project, so break it down into smaller, manageable pieces. Start with the core drawing functionality and build from there!
